--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <label id="label_auto_capture" for="autoCapture">
         <input type="checkbox" id="autoCapture" name="autoCapture" value="yes">  Auto Capture 
      </label>
-     <button id="camera" class="btn btn-success" onclick="javascript:startCamera()">Start Camera</button>
+     <button id="camera" disabled="true" class="btn btn-success" onclick="javascript:startCamera()">Start Camera</button>
     </div>
 
     <script type="text/javascript" src="main.js"></script>    
