--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
      <button id="camera" disabled="true" class="btn btn-success" onclick="javascript:startCamera()">Start Camera</button>
     </div>
 
+    <div class="msg_label" id="res_yaw"></div>
+    <div class="msg_label" id="res_pitch"></div>
+    <div class="msg_label" id="res_roll"></div>
+    <div class="msg_label" id="res_brisque"></div>
+    <div class="msg_label" id="res_eyeDist"></div>
+    <div class="msg_label" id="res_eyeClosed"></div>
+    <div class="msg_label" id="res_mask"></div>
+    <div class="msg_label" id="res_sunglass"></div>
+    <div class="msg_label" id="res_leftEye"></div>
+    <div class="msg_label" id="res_rightEye"></div>
+    <div class="msg_label" id="res_faceScore"></div>
+
     <script type="text/javascript" src="main.js"></script>    
 </body>
 
