log version, brisque, mask

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <div class="msg_label" id="res_leftEye"></div>
     <div class="msg_label" id="res_rightEye"></div>
     <div class="msg_label" id="res_faceScore"></div>
+    <div class="msg_label" id="res_liveness"></div>
 
     <script type="text/javascript" src="main.js"></script>    
 </body>
