best frame logic

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <canvas id="capture"></canvas>
       <img src="face_cover.png" id="face_cover"/>
       <canvas id="capture1"></canvas>
+      <canvas id="best_capture"></canvas>
     </div>
 
     <div id="nav">
