--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Phoenix Demo</title>
+    <title>Phoenix Demo 020301</title>
     <script src="https://unpkg.com/lodash@4/lodash.min.js"></script>
     <script src="https://unpkg.com/lowdb@0.17/dist/low.min.js"></script>
     <script src="https://unpkg.com/lowdb@0.17/dist/LocalStorage.min.js"></script>
+   
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
@@ -21,14 +22,16 @@
       <canvas id="capture"></canvas>
       <img src="face_cover.png" id="face_cover"/>
       <canvas id="capture1"></canvas>
-      <canvas id="best_capture"></canvas>
     </div>
-
+    <div>
+      <label id="liveness_error_msg" style="color: white;"></label>
+    </div>
     <div id="nav">
       <label id="label_auto_capture" for="autoCapture">
         <input type="checkbox" id="autoCapture" name="autoCapture" value="yes">  Auto Capture 
      </label>
-     <button id="camera" disabled="true" class="btn btn-success" onclick="javascript:startCamera()">Start Camera</button>
+     <button id="camera" disabled="true" class="btn btn-success" onclick="javascript:startCamera()">Start Camera</button>  
+     <button id="captureButton" disabled="true" class="btn btn-success" onclick="javascript:takePhoto()">Capture</button>
     </div>
 
     <div class="msg_label" id="res_yaw"></div>
